native/crates/specular-scene/tests/snapshots/panels__page_menu.snap
---
source: crates/specular-scene/tests/panels.rs
expression: app.panel_scene_snapshot()
---
screen rect 0,0 1200x44 fill=#d6d3d1
screen rect 0,43 1200x1 fill=#a6a09b
screen rect 408,8 32x28 r=6 fill=#fdf8f5
screen path 24 commands in 416.81,14.82 15.2x15.19 fill=#e8e8e8
screen path 40 commands in 416.81,14.82 15.2x15.19 fill=#45403c
screen rect 448,14 1x16 fill=#18181b33
screen path M475.44,17.51 C475.48,17.63 475.5,17.75 475.5,17.88 C475.5,18.5 475,19 474.38,19 L472.62,19 C472,19 471.5,18.5 471.5,17.88 C471.5,17.75 471.52,17.63 471.56,17.51 L472.98,13.47 C473.16,12.98 473.84,12.98 474.02,13.47 L475.44,17.51 Z fill=#cd0000 clip=463,12 20x20
screen path M476,17.88 C476,18.77 475.27,19.5 474.38,19.5 L472.62,19.5 C471.73,19.5 471,18.77 471,17.88 C471,17.7 471.03,17.51 471.09,17.34 L472.51,13.3 C472.84,12.37 474.16,12.37 474.49,13.3 L475.91,17.34 C475.97,17.51 476,17.7 476,17.88 Z stroke=#18181b/1 clip=463,12 20x20
screen path 14 commands in 467,17.99 13x50.01 fill=#f4f4f4 clip=463,12 20x20
screen path 14 commands in 467.5,18.49 12x49.01 stroke=#18181b/1 clip=463,12 20x20
screen path M476.1,20.37 L479,27 C477.57,25.9 475.49,26.45 474.79,28.11 L474,30 L474,19 C474.91,19 475.74,19.54 476.1,20.37 Z fill=#dbdbdb6e clip=463,12 20x20
screen path M473,19 L474,19 L474,19 L474,31 L474,31 L473,31 L473,31 L473,19 L473,19 Z fill=#b5b5b5aa clip=463,12 20x20
screen path M506.4,15.77 L515.38,16.24 C517.04,16.33 518.32,17.74 518.26,19.4 L517.88,28.39 C517.81,30.04 516.41,31.32 514.76,31.23 L505.77,30.76 C504.12,30.67 502.83,29.26 502.9,27.6 L503.28,18.61 C503.35,16.96 504.74,15.68 506.4,15.77 Z fill=#ffeab0
screen path M506.38,16.27 L515.36,16.74 C516.74,16.81 517.81,17.99 517.76,19.37 L517.38,28.36 C517.32,29.74 516.16,30.8 514.78,30.73 L505.79,30.26 C504.41,30.19 503.34,29.01 503.4,27.63 L503.78,18.64 C503.83,17.26 505,16.2 506.38,16.27 Z stroke=#45403c/1
screen path M500,15 L500,26 C500,27.1 500.9,28 502,28 L513,28 C514.11,28 515,27.1 515,26 L515,22.88 C515,17 511,13 507.4,13 L502,13 C500.9,13 500,13.9 500,15 Z fill=#ffeab0
screen path M502,13.5 L507.4,13.5 C510.64,13.5 514.5,17.19 514.5,22.88 L514.5,26 C514.5,26.83 513.83,27.5 513,27.5 L502,27.5 C501.17,27.5 500.5,26.83 500.5,26 L500.5,15 C500.5,14.17 501.17,13.5 502,13.5 Z stroke=#45403c/1
screen path M507.4,13.5 C507.52,13.5 507.66,13.54 507.84,13.61 C509.9,14.45 509.86,17.23 508.82,19.21 C508.73,19.38 508.87,19.58 509.06,19.55 L509.69,19.45 C511.45,19.17 513.38,19.71 514.07,21.35 C514.39,22.12 514.5,22.74 514.5,23 stroke=#45403c/1
screen path M537,13.5 L544,13.5 C544.83,13.5 545.5,14.17 545.5,15 L545.5,22 C545.5,22.83 544.83,23.5 544,23.5 L537,23.5 C536.17,23.5 535.5,22.83 535.5,22 L535.5,15 C535.5,14.17 536.17,13.5 537,13.5 Z fill=#efcbcd stroke=#45403c/1
screen path M546,20.5 L546,20.5 C548.49,20.5 550.5,22.51 550.5,25 L550.5,25 C550.5,27.49 548.49,29.5 546,29.5 L546,29.5 C543.51,29.5 541.5,27.49 541.5,25 L541.5,25 C541.5,22.51 543.51,20.5 546,20.5 Z fill=#efcbcd stroke=#45403c/1
screen path 66 commands in 547.5,13.5 7.21x7.21 fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z fill=#e8e8e8
screen path M571.5,18 L571.5,15 C571.5,13.9 572.4,13 573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,18 Z fill=#edebe3
screen path M571.5,18 L587.5,18 stroke=#45403c/1
screen path M574.5,14.5 L574.5,14.5 C575.05,14.5 575.5,14.95 575.5,15.5 L575.5,15.5 C575.5,16.05 575.05,16.5 574.5,16.5 L574.5,16.5 C573.95,16.5 573.5,16.05 573.5,15.5 L573.5,15.5 C573.5,14.95 573.95,14.5 574.5,14.5 Z fill=#45403c
screen path M577.5,14.5 L577.5,14.5 C578.05,14.5 578.5,14.95 578.5,15.5 L578.5,15.5 C578.5,16.05 578.05,16.5 577.5,16.5 L577.5,16.5 C576.95,16.5 576.5,16.05 576.5,15.5 L576.5,15.5 C576.5,14.95 576.95,14.5 577.5,14.5 Z fill=#45403c
screen path M580.5,14.5 L580.5,14.5 C581.05,14.5 581.5,14.95 581.5,15.5 L581.5,15.5 C581.5,16.05 581.05,16.5 580.5,16.5 L580.5,16.5 C579.95,16.5 579.5,16.05 579.5,15.5 L579.5,15.5 C579.5,14.95 579.95,14.5 580.5,14.5 Z fill=#45403c
screen path M573.5,13 L585.5,13 C586.6,13 587.5,13.9 587.5,15 L587.5,23 C587.5,24.1 586.6,25 585.5,25 L573.5,25 C572.4,25 571.5,24.1 571.5,23 L571.5,15 C571.5,13.9 572.4,13 573.5,13 Z stroke=#45403c/1
screen path M584.37,15.6 L588.57,16.73 C589.81,17.06 590.55,18.34 590.21,19.58 L587.79,28.61 C587.46,29.85 586.19,30.58 584.95,30.25 L580.75,29.13 C579.51,28.79 578.77,27.52 579.1,26.28 L581.52,17.25 C581.85,16.01 583.13,15.27 584.37,15.6 Z fill=#e8e8e8 stroke=#45403c/1
screen path M581.56,26.75 L585.43,27.79 stroke=#45403c/1
screen path 56 commands in 610,14.5 15x13.5 fill=#e8e8e8 stroke=#45403c/1
screen path 69 commands in 646.44,13.94 13.13x16.13 fill=#45403c
screen path 50 commands in 647.56,15.06 10.87x13.88 fill=#e8e8e8
screen rect 677,14 1x16 fill=#18181b33
screen path 25 commands in 693.56,13.57 12.47x12.48 fill=#e8e8e8 stroke=#45403c/1.11
screen path 62 commands in 695.33,15.33 16.11x16.11 fill=#45403c
screen rect 726,14 1x16 fill=#18181b33
screen text "100%" 744,8 box-h=28 12/16 #52525c middle
screen path M780.5,20.75 L783,23.25 L785.5,20.75 stroke=#45403c66/0.83
screen path M24.92,16.75 L33.08,16.75 C33.73,16.75 34.25,17.27 34.25,17.92 L34.25,26.08 C34.25,26.73 33.73,27.25 33.08,27.25 L24.92,27.25 C24.27,27.25 23.75,26.73 23.75,26.08 L23.75,17.92 C23.75,17.27 24.27,16.75 24.92,16.75 Z stroke=#52525c/1.17 opacity=0.5
screen path M27.25,16.75 L27.25,27.25 stroke=#52525c/1.17 opacity=0.5
screen shadow 165,140 645x36 r=10 blur=16 fill=#c7c1bc80
screen shadow 171,152 633x24 r=4 blur=8 fill=#0000002e
screen rect 165,136 645x36 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen path M183.75,157.5 L180.25,154 L183.75,150.5 stroke=#30303094/1.17 opacity=0.3
screen path M208.25,157.5 L211.75,154 L208.25,150.5 stroke=#30303094/1.17 opacity=0.3
screen path M242.5,154 C242.5,156.49 240.49,158.5 238,158.5 C235.51,158.5 233.5,156.49 233.5,154 C233.5,151.51 235.51,149.5 238,149.5 C239.26,149.5 240.46,150 241.37,150.87 L242.5,152 M242.5,149.5 L242.5,152 L240,152 stroke=#30303094/1
screen rect 258,146 1x16 fill=#18181b33
screen rect 267,141 280x26 r=6 fill=#ffffff stroke=#d4d4d8/1/inside
screen text "https://example.com/p" 276,142 box-h=24 12/16 #303030 middle clip=276,142 262x24
screen rect 555,146 1x16 fill=#18181b33
screen text "Custom" 572,142 box-h=24 12/16 #30303094 middle
screen path M638.5,152.75 L641,155.25 L643.5,152.75 stroke=#30303094/0.83
screen rect 662,146 1x16 fill=#18181b33
screen path M680.08,148.17 L685.92,148.17 C686.56,148.17 687.08,148.69 687.08,149.33 L687.08,158.67 C687.08,159.31 686.56,159.83 685.92,159.83 L680.08,159.83 C679.44,159.83 678.92,159.31 678.92,158.67 L678.92,149.33 C678.92,148.69 679.44,148.17 680.08,148.17 Z stroke=#30303094/1.17
screen path M683,157.5 L683.01,157.5 stroke=#30303094/1.17
screen path 22 commands in 705,147.44 7x7.06 fill=#30303094
screen path 22 commands in 710,152.5 7x7.06 fill=#30303094
screen rect 731,146 1x16 fill=#18181b33
screen path 76 commands in 746.35,147.82 11.83x11.83 fill=#45403c
screen path 20 commands in 747.06,152.69 6.25x6.25 fill=#e8e8e8
screen rect 772,146 1x16 fill=#18181b33
screen path M794.75,148.75 L798.25,148.75 L798.25,152.25 M791.25,159.25 L787.75,159.25 L787.75,155.75 M798.25,148.75 L794.17,152.83 M787.75,159.25 L791.83,155.17 stroke=#30303094/1.17
screen shadow 400,404 170x358 r=10 blur=16 fill=#c7c1bc80
screen shadow 406,416 158x346 r=4 blur=8 fill=#0000002e
screen rect 400,400 170x358 r=10 fill=#fafaf9 stroke=#cac6c3/1/inside
screen text "Back" 413,405 box-h=24 12/16 w500 #30303094 middle opacity=0.3
screen text "Forward" 413,429 box-h=24 12/16 w500 #30303094 middle opacity=0.3
screen rect 405,453 160x24 r=6 fill=#f5f5f4
screen text "Reload" 413,453 box-h=24 12/16 w500 #303030 middle
screen rect 525,457 32x16 r=4 fill=#e7e5e4
screen text "⌘R" 541,457 box-h=16 12/16 #57534d centre middle
screen rect 405,481 160x1 fill=#18181b33
screen text "Cut" 413,486 box-h=24 12/16 w500 #30303094 middle
screen rect 525,490 32x16 r=4 fill=#e7e5e4
screen text "⌘X" 541,490 box-h=16 12/16 #57534d centre middle
screen text "Copy" 413,510 box-h=24 12/16 w500 #30303094 middle
screen rect 525,514 32x16 r=4 fill=#e7e5e4
screen text "⌘C" 541,514 box-h=16 12/16 #57534d centre middle
screen text "Paste" 413,534 box-h=24 12/16 w500 #30303094 middle
screen rect 525,538 32x16 r=4 fill=#e7e5e4
screen text "⌘V" 541,538 box-h=16 12/16 #57534d centre middle
screen text "Duplicate" 413,558 box-h=24 12/16 w500 #30303094 middle
screen rect 525,562 32x16 r=4 fill=#e7e5e4
screen text "⌘D" 541,562 box-h=16 12/16 #57534d centre middle
screen rect 405,586 160x1 fill=#18181b33
screen text "Bring forward" 413,591 box-h=24 12/16 w500 #30303094 middle
screen rect 525,595 32x16 r=4 fill=#e7e5e4
screen text "⌘]" 541,595 box-h=16 12/16 #57534d centre middle
screen text "Send backward" 413,615 box-h=24 12/16 w500 #30303094 middle
screen rect 525,619 32x16 r=4 fill=#e7e5e4
screen text "⌘[" 541,619 box-h=16 12/16 #57534d centre middle
screen text "Bring to front" 413,639 box-h=24 12/16 w500 #30303094 middle
screen rect 515,643 42x16 r=4 fill=#e7e5e4
screen text "⇧⌘]" 536,643 box-h=16 12/16 #57534d centre middle
screen text "Send to back" 413,663 box-h=24 12/16 w500 #30303094 middle
screen rect 515,667 42x16 r=4 fill=#e7e5e4
screen text "⇧⌘[" 536,667 box-h=16 12/16 #57534d centre middle
screen rect 405,691 160x1 fill=#18181b33
screen text "Annotate selection" 413,696 box-h=24 12/16 w500 #30303094 middle
screen rect 405,724 160x1 fill=#18181b33
screen text "Delete" 413,729 box-h=24 12/16 w500 #30303094 middle
screen rect 535,733 22x16 r=4 fill=#e7e5e4
screen text "⌫" 546,733 box-h=16 12/16 #57534d centre middle
